--- a/app/src/main/res/layout/activity_update_customer.xml
+++ b/app/src/main/res/layout/activity_update_customer.xml
@@ -75,10 +75,74 @@
 
         </com.google.android.material.tabs.TabLayout>
 
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/balance_header"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@id/tab_layout"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Balance: "
+                android:textSize="18sp"
+                android:textColor="@android:color/black"
+                />
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/rupee_symbol"
+                android:textStyle="bold"
+                android:layout_marginStart="2dp"
+                android:textColor="@android:color/black"
+                android:textSize="18sp"
+                />
+
+            <TextView
+                android:id="@+id/balance"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                tools:text="318938"
+                android:layout_marginStart="4dp"
+                android:textColor="@android:color/black"
+                android:textStyle="bold"
+                android:textSize="22sp"
+                android:text="@{String.valueOf(customer.balance)}"
+                android:layout_weight="1"
+                />
+
+            <Button
+                android:id="@+id/edit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Edit"
+                android:visibility="@{viewModel.isInEditMode || !viewModel.isDetailsTabSelected? View.INVISIBLE : View.VISIBLE}"
+                android:textAllCaps="false"
+                android:onClick="edit"
+                tools:visibility="gone"
+                />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/amount_received"
+                android:textAllCaps="false"
+                android:onClick="amountReceived"
+                android:visibility="@{viewModel.isDetailsTabSelected?View.GONE:View.VISIBLE}"
+                />
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/tab_layout"
+            app:layout_constraintTop_toBottomOf="@id/balance_header"
             app:layout_constraintBottom_toBottomOf="parent"
             >
 
@@ -91,56 +155,6 @@
                 android:visibility="@{viewModel.isDetailsTabSelected?View.VISIBLE:View.INVISIBLE}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/header">
-
-                <androidx.appcompat.widget.LinearLayoutCompat
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    >
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Balance: "
-                        android:textSize="18sp"
-                        android:textColor="@android:color/black"
-                        />
-
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/rupee_symbol"
-                        android:textStyle="bold"
-                        android:layout_marginStart="2dp"
-                        android:textColor="@android:color/black"
-                        android:textSize="18sp"
-                        />
-
-                    <TextView
-                        android:id="@+id/balance"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        tools:text="318938"
-                        android:layout_marginStart="4dp"
-                        android:textColor="@android:color/black"
-                        android:textStyle="bold"
-                        android:textSize="22sp"
-                        android:text="@{String.valueOf(customer.balance)}"
-                        android:layout_weight="1"
-                        />
-
-                    <Button
-                        android:id="@+id/edit"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Edit"
-                        android:visibility="@{viewModel.isInEditMode ? View.INVISIBLE : View.VISIBLE}"
-                        android:textAllCaps="false"
-                        android:onClick="edit"
-                        />
-
-                </androidx.appcompat.widget.LinearLayoutCompat>
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
@@ -243,54 +257,6 @@
                 tools:visibility="visible"
                 android:visibility="@{viewModel.isDetailsTabSelected?View.INVISIBLE:View.VISIBLE}"
                 >
-
-                <androidx.appcompat.widget.LinearLayoutCompat
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    >
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/balance"
-                        android:textSize="18sp"
-                        android:textColor="@android:color/black"
-                        />
-
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/rupee_symbol"
-                        android:textStyle="bold"
-                        android:layout_marginStart="2dp"
-                        android:textColor="@android:color/black"
-                        android:textSize="18sp"
-                        />
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        tools:text="318938"
-                        android:layout_marginStart="4dp"
-                        android:textColor="@android:color/black"
-                        android:textStyle="bold"
-                        android:textSize="22sp"
-                        android:text="@{String.valueOf(customer.balance)}"
-                        android:layout_weight="1"
-                        />
-
-                    <Button
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/amount_received"
-                        android:visibility="@{viewModel.isInEditMode ? View.INVISIBLE : View.VISIBLE}"
-                        android:textAllCaps="false"
-                        android:onClick="amountReceived"
-                        />
-
-                </androidx.appcompat.widget.LinearLayoutCompat>
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/records_recycler"
