--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,7 +1,15 @@
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    >
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+        <import type="android.view.View"/>
+        <variable
+            name="updateBusinessName" type="Boolean" />
+        <variable
+            name="bName" type="String" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -11,7 +19,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-
             app:layout_constraintTop_toTopOf="parent">
 
             <androidx.appcompat.widget.AppCompatImageView
@@ -35,13 +42,120 @@
 
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/business_name_tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/header"
+            tools:text="B K Jewellers"
+            android:visibility="@{updateBusinessName?View.GONE:View.VISIBLE}"
+            android:text="@{bName}"
+            android:textSize="32sp"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimaryTranslucent"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/header"
+            app:layout_constraintBottom_toBottomOf="@id/business_name_tv"
+            android:layout_marginEnd="20dp"
+            app:drawableStartCompat="@drawable/ic_edit"
+            android:text="@string/change_name"
+            android:textStyle="bold"
+            android:textSize="16sp"
+            android:visibility="@{updateBusinessName?View.GONE:View.VISIBLE}"
+            android:gravity="center"
+            android:onClick="changeName"
+            />
+
+
         <ListView
             android:id="@+id/listView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/header"
+            android:visibility="@{updateBusinessName?View.GONE:View.VISIBLE}"
+            app:layout_constraintTop_toBottomOf="@id/business_name_tv"
             app:layout_constraintBottom_toBottomOf="parent"
             />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintTop_toBottomOf="@id/header"
+            android:visibility="@{updateBusinessName?View.VISIBLE:View.GONE}"
+            android:layout_marginTop="10dp"
+            tools:visibility="gone"
+            >
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/raleway"
+                android:text="@string/update_name"
+                android:textColor="@color/colorPrimary"
+                android:textSize="18sp"
+                android:layout_marginStart="10dp"
+                />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/name_field"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/edit_name"
+                app:startIconDrawable="@drawable/ic_business"
+                android:paddingStart="10dp"
+                app:startIconTint="@color/colorPrimaryLight"
+                android:paddingEnd="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
+                >
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/business_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@android:color/transparent"
+                    android:inputType="textPersonName"
+                    android:text="@{bName}"
+                    />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                >
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:text="@string/save"
+                    android:onClick="changeBusinessName"
+                    />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end|center"
+                    android:text="@string/cancel"
+                    android:textSize="20sp"
+                    android:gravity="center"
+                    android:onClick="cancelChangingName"
+                    />
+
+
+            </FrameLayout>
+
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
